--- a/.github/workflows/main_product-app.yml
+++ b/.github/workflows/main_product-app.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # This is required for actions/checkout
+      contents: read # Required for actions/checkout
 
     steps:
       - name: Checkout Repository
@@ -31,7 +31,7 @@ jobs:
         run: npm run build --if-present
 
       # 🚀 FIX: Removed failing test command (no tests exist)
-      
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
@@ -44,12 +44,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write # Required for requesting the JWT
-      contents: read # Required for actions/checkout
+      id-token: write # ✅ Fix: Required for Azure authentication
+      contents: read # ✅ Fix: Required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -67,10 +64,9 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'product-app'
-          slot-name: 'Production'
           package: release.zip
